Fixed chat styling, added scrollbar inside chat window

--- a/App/static/css/style.css
+++ b/App/static/css/style.css
@@ -18,6 +18,24 @@ body {
   height: 50px;
 }
 
+/* CHATBOX */
+/* Chat data (First container) */
+#chat-data {
+  width: 80%;
+}
+/* Card chat (Second container) */
+.card-chat {
+  width: 80%;
+  font: 14px;
+  overflow-y: auto;
+  height: 700px;
+  scroll-behavior: smooth;
+}
+/* Font-size icon (back button navbar (back.html)) */
+.fa-size {
+  font-size: 20px;
+}
+
 /* OTHERS */
 /* All buttons (width) */
 .my-btn {
